# investing

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: rules.mdc
config/: market_data.example.json
config/simulations/: simulation.example.json
docs/: google-sheets-cli.md  instruments-cli.md  simulation-metrics.md  todo.md
notebook/: multiple_simulations.ipynb  testing.ipynb
reports/quarto/: .gitignore  _quarto.yml  comparison_report.qmd  strategy_report.qmd
src/investing/: analysis.py  data.py  history.py  instruments_cli.py  metrics.py  portfolio.py  report_cli.py  reporting.py  sheets_api.py  sheets_cli.py  sheets_config.py  simulate_cli.py  simulation.py  simulation_output.py
tests/: test_analysis.py  test_annual_rebalance.py  test_data.py  test_history.py  test_instruments_cli.py  test_metrics.py  test_portfolio.py  test_report_cli.py  test_reporting.py  test_sheets_config.py  test_simulate_cli.py  test_simulation.py  test_simulation_output.py
