[project]
name = "investing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Underwood", email = "seanbunderwood@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.19.0",
    "polars>=1.39.3",
]

[project.scripts]
investing = "investing:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "pytest>=9.0.3",
    "seaborn>=0.13.2",
]
