[project]
name = "investing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Underwood", email = "seanbunderwood@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastexcel>=0.19.0",
    "google-api-python-client>=2.160.0",
    "google-auth-oauthlib>=1.2.0",
    "polars>=1.39.3",
    "tqdm>=4.67.1",
]

[project.scripts]
investing = "investing:main"
investing-sheets = "investing.sheets_cli:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "seaborn>=0.13.2",
]
